editing paragraphs connection sheets

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<!--<html lang="es">-->
 <head><!--inicializamos coneccion a hoja de estilos y a bootstrap para la plantillas usadas -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Energía Solar - Innovación y Ahorro</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../energy-solar/css/styles.css">
+    <link rel="stylesheet" href="../energy-solar/css/mystyles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!--lines necesarias para footer-->
     <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -75,7 +76,10 @@
 
     <section id="about" class="container my-5">
         <h2 class="text-center">¿Porque Migrar a Energia Solar?</h2>
-        <p class="text-center">Somos una empresa comprometida con la innovación en energía solar, ayudando a hogares y negocios a reducir costos y mejorar la sostenibilidad.</p>
+        <p class="text-center"text-align: justify>Somos una empresa comprometida con la innovación en energía solar, ayudando a hogares y negocios a reducir costos y mejorar la sostenibilidad.
+            dfmkdklkddbgbmkkgkbgfmbgfmbkfmgkmkbgmklmfkbdmggmkjgfjgsdmksdlsdfkñdfmkldfkkvmkm dfkvmsdfkmkdbvfm
+            dfjksdfjhdfjhfjgfjdfjkhgjhdfjhdfjhjghjkhkjkhjhfdjkhjhkdfgjghjdf
+        </p>
     </section>
 
     <!-- Sección: Calculadora -->
@@ -95,7 +99,7 @@
                 <canvas id="energyChart"></canvas> <!-- Aquí irá el gráfico -->
             </div>
         </div>
-    <!-- aqui ingresaremos la otra calculadora  para conocer el numero de paneles solares  necesarios para cubrir tu consumo mensuaal -->
+       <!-- aqui ingresaremos la otra calculadora  para conocer el numero de paneles solares  necesarios para cubrir tu consumo mensuaal -->
         <h2 class="text-center">Calcula Numero de Celdas Solares Necesarias para cubrir tu Consumo</h2>
         <div class="row justify-content-center">
             <div class="col-md-5">
@@ -132,10 +136,11 @@
                 <div class="card">
                     <img padding: 10px 10px 10px src="./imagenes/metro3.jpg" href="../energy-solar/pagina1.html" target="_blank" class="card-img-top" alt="Proyecto 1">
                     <div class="card-body">
-                        <a href="../energy-solar/pagina1.html" target="_blank" rel="noopener noreferrer"></a>
-                        <h5 href="../energy-solar/pagina1.html" class="card-title">Metro de Medellín</h5>
-                        <p class="card-text">El metro le sigue apostando al uso de energías verdes y limpias para la movilidad
+                        <h5 href="./pagina1.html" class="text-center" color: #007BFF>Metro de Medellín</h5>
+                         <p class="card-text" text-align: justify-all>El metro le sigue apostando al uso de energías verdes y limpias para la movilidad
                             de todos los habitantes del área metropolitana del valle de aburra.</p>
+                        <li class="nav-item"><a class="nav-link" href="./pagina1.html">Ver mas</a></li>
+
                     </div>
                 </div>
             </div>
@@ -145,9 +150,12 @@
                     <div class="card">
                         <img src="./imagenes/molinos1.jpg" class="card-img-top" alt="Proyecto 1">
                         <div class="card-body">
-                            <h5 class="card-title">Centro Comercial Los Molinos</h5>
-                            <p class="card-text">Se convierte en el centro comercial con mayor generación de 
-                                energía fotovoltaica de Medellín y El Valle de Aburrá con 1456 paneles solares.</p>
+                            <h5 class="text-center">Centro Comercial Los Molinos</h5>
+                            <p class="card-text" text-align: justify-all>Se convierte en el centro comercial con mayor generación de 
+                                energía fotovoltaica de Medellín y El Valle de Aburrá con 1456 paneles solares.
+                            </p>
+                            <li class="nav-item"><a class="nav-link" href="./pagina2.html">Ver mas</a></li>
+       
                         </div>
                     </div>
                 </div>
@@ -158,10 +166,11 @@
                     <div class="card">
                         <img src="./imagenes/sabaneta.jpg" class="card-img-top" alt="Proyecto 1">
                         <div class="card-body">
-                            <h5 class="card-title">Entretenimiento: Parque acuático y de los 4 elementos </h5>
-                            <p class="card-text">Aplicaciones de los paneles solares distinto al hogar o transporte. Mira que divertido y ecológico 
+                            <h5 class="text-center">Entretenimiento: Parque acuático y de los 4 elementos </h5>
+                            <p class="card-text" text-align: justify-all>Aplicaciones de los paneles solares distinto al hogar o transporte. Mira que divertido y ecológico 
                                 puede ser usar una energía limpia para nuestro entretenimiento.
                             </p>
+                            <li class="nav-item"><a class="nav-link" href="./pagina3.html"text:#007BFF>Ver mas</a></li>
                         </div>
                     </div>
                 </div>
