--- a/pagina1.html
+++ b/pagina1.html
@@ -37,27 +37,27 @@
     <header>
         <center><img src="./imagenes/metro1.jpeg"
         alt="Sistema metro de Medellin, Antioquia, Colombia"/></center>
-        <center><p2 onmouseover="img()"> Sistema metro de Medellin y sus paneles solares, Antioquia, Colombia </p2></center>
+        <center><p2 onmouseover="img()"color:#007BFF> Sistema metro de Medellin y sus paneles solares, Antioquia, Colombia </p2></center>
     </header>
-    
+<section id="about" class="container my-5">
     <br>
-    <h3> Paneles solares generan cerca del 50% de la energía de cinco oficinicas de la red Metro: </h3>
+    <h3 class="text-center" > Paneles solares generan cerca del 50% de la energía de cinco oficinicas de la red Metro: </h3>
     <br>
-<justify><p> El Metro de Medellín ha completado la primera etapa de su proyecto de generación solar fotovoltaica con resultados positivos. 
+        <p text-align: justify-all> El Metro de Medellín ha completado la primera etapa de su proyecto de generación solar fotovoltaica con resultados positivos. 
         Se instalaron 350 paneles solares en varias estaciones del Metrocable Miraflores, la línea H y la Sede Administrativa, generando 
         56.217 kWh, lo que equivale a la energía de 468 apartamentos. Esto ha permitido que el 50% de la energía utilizada en esas estaciones 
         provenga de la energía solar, reduciendo las emisiones de CO<sub>2</sub> y contribuyendo a la calidad del aire. El proyecto apoya la Estrategia 
         Colombiana de Desarrollo Bajo en Carbono y ha permitido exportar energía excedente a la red externa. Además, el Metro planea continuar 
         con la implementación de energía solar en futuros proyectos y en sus instalaciones actuales, con la posibilidad de vender energía 
-        limpia en el futuro. </p></justify>
+        limpia en el futuro. </p>
         <a href="https://www.metrodemedellin.gov.co/al-dia/noticias/paneles-solares-generan-cerca-del-50-de-la-energ%C3%ADa-que-se-consume-en-cinco-edificaciones-de-la-red-metro"><img
             src="" />Para más detalles.</a>
 
 <!-- Section 2 -->
-        <br></br>
-        <h3> Inicia la instalación de paneles solares fotovoltaicos en varias estaciones del Sistema para la implementación de energías limpias: </h3>
         <br>
-        <p> El Metro de Medellín ha iniciado la instalación de paneles solares fotovoltaicos en varias estaciones, como Trece de Noviembre, 
+        <h3 class="text-center"> Inicia la instalación de paneles solares fotovoltaicos en varias estaciones del Sistema para la implementación de energías limpias: </h3>
+        <br>
+        <p text-align: justify-all> El Metro de Medellín ha iniciado la instalación de paneles solares fotovoltaicos en varias estaciones, como Trece de Noviembre, 
             El Pinal, Villa Sierra, Las Torres y su sede administrativa. Estos sistemas se utilizarán para el autoabastecimiento 
             energético, cubriendo aproximadamente el 20% del consumo eléctrico de las instalaciones. La energía solar generada reducirá la huella 
             de carbono en 63,47 toneladas de CO<sub>2</sub> anuales. Además, esta energía renovable contribuye a frenar el cambio climático y es rentable a 
@@ -65,7 +65,7 @@
             total de 128 kWp, y se planea seguir ampliando la implementación de energías limpias en otras edificaciones del Metro.</p>   
             <a href="https://www.metrodemedellin.gov.co/al-dia/noticias/el-metro-de-medellin-inicio-la-instalacion-de-paneles-solares-fotovoltaicos-en-varias-estaciones-del-sistema-para-avanzar-en-la-implementacion-de-energia"><img
                 src="" />Para más detalles.</a>
-    
+</section> 
                 <script src="app.js"></script>
 </body>
 
