--- a/pagina3.html
+++ b/pagina3.html
@@ -39,15 +39,15 @@
         alt="Parque acuatico en Piojó, Atlántico, Colombia"/></center>
         <center><p2 onmouseover="img4()"> Granja de Paneles Solares en el parque caribe aventura, Atlántico, Colombia </p2></center>
     </header>
-    
+<section id="about" class="container my-5">    
     <br>
-    <h3> La Diversión se sostiene con Energía Propia en Caribe Aventura: </h3>
+    <h3 class="text-center"> La Diversión se sostiene con Energía Propia en Caribe Aventura: </h3>
     <br>
-<justify><p> Caribe Aventura es 100% sostenible, con su planta solar que abastece todas sus atracciones, 
+<p text-align: justify-all> Caribe Aventura es 100% sostenible, con su planta solar que abastece todas sus atracciones, 
     espectáculos y servicios con energía limpia. Al elegir este parque, eliges un lugar comprometido con el 
     cuidado del medio ambiente. A pesar de los rumores falsos de la empresa AIRE sobre la energía generada en la 
     empresa, la verdad es que son autosuficientes y operan con energía solar. Vive la experiencia 
-    de explorar el parque, sabiendo que cada actividad se realiza de manera responsable con el planeta. </p></justify>
+    de explorar el parque, sabiendo que cada actividad se realiza de manera responsable con el planeta. </p>
         <a href="https://caribeaventura.com/energia-solar/"><img
             src="" />Para más detalles.</a>
 
@@ -57,28 +57,28 @@
     alt="Parque en Sabaneta, Antioquia, Colombia"/></center>
     <center><p2 onmouseover="img5()">Aplicación reciente: Parque 4 elementos en Sabaneta, Medellin.</p2></center>
 
-        <br></br>
-        <h3> El Parque de los Cuatro Elementos en Sabaneta, se alimenta de energía solar: </h3>
         <br>
-        <p> El Parque de los Cuatro Elementos en Sabaneta no es solo un lugar de recreación, sino una experiencia de conexión con la naturaleza.
+        <h3 class="text-center"> El Parque de los Cuatro Elementos en Sabaneta, se alimenta de energía solar: </h3>
+        <br>
+        <p text-align: justify-all>El Parque de los Cuatro Elementos en Sabaneta no es solo un lugar de recreación, sino una experiencia de conexión con la naturaleza.
              Inaugurado el 13 de junio del 2019, el parque ofrece 6.200 metros cuadrados de espacio público en el barrio Aliadas del Sur. Sus zonas 
              verdes representan la tierra, las fuentes simbolizan el agua, los árboles y siembras evocan el aire, y el jardín solar simboliza 
              el fuego al generar energía. El proyecto, que costó $6.800 millones, fue financiado principalmente por el Área Metropolitana del Valle de Aburrá con $6.357 
             millones. La obra incluye un jardín solar, ludoteca, locales comerciales, aulas para la Escuela de Ecología Urbana, zonas de picnic, 
             juegos infantiles, fuentes interactivas y más.
-            <br></br>
+            <br>
             Este parque surge debido a la necesidad de nuevos espacios públicos por el crecimiento urbano de Sabaneta. El lote, originalmente 
             destinado a viviendas de alta densidad, fue transformado en un parque para el disfrute de los habitantes. El parque cuenta con un 
             jardín solar compuesto por 72 paneles fotovoltaicos que generarán hasta 20kw/hora de energía limpia para 
             las instalaciones del parque. Esto reduce el gasto en servicios públicos y contribuye a la autosostenibilidad, con materiales
              reciclables y sin generar contaminación.
-            <br></br>
+            <br>
             El Alcalde Iván Alonso Montoya destacó que el parque promueve la conciencia ambiental y el cuidado de lo público, beneficiando a 
             toda la comunidad. Sabaneta sigue avanzando con proyectos de infraestructura, cultura y medio ambiente, como la construcción de 
             andenes, ciclovías y centros culturales.</p>   
             <a href="https://www.metropol.gov.co/Paginas/Noticias/abre-el-parque-de-los-cuatro-elementos-en-sabaneta.aspx"><img
                 src="" />Para más detalles.</a>
-    
+</section>    
                 <script src="app.js"></script>
 </body>
 
