--- a/pagina2.html
+++ b/pagina2.html
@@ -39,18 +39,18 @@
         alt="Centro comercial los molinos en Medellin, Antioquia, Colombia"/></center>
         <center><p2 onmouseover="img2()"> Centro comercial los Molinos y los paneles solares de Celsia. </p2></center>
     </header>
-    
+<section id="about" class="container my-5"> 
     <br>
-    <h3>El Centro Comercial se conviertes en el mayor generador de energía fotovoltaica de Medellín y El Valle de Aburrá:</h3>
+    <h3 class="text-center">El Centro Comercial se conviertes en el mayor generador de energía fotovoltaica de Medellín y El Valle de Aburrá:</h3>
     <br>
-<justify><p> El Centro Comercial Los Molinos, a través de su proyecto Molinos Azul, instaló un sistema de 1.456
+<p text-align: justify> El Centro Comercial Los Molinos, a través de su proyecto Molinos Azul, instaló un sistema de 1.456
      paneles solares con Celsia, convirtiéndose en el mayor generador de energía fotovoltaica de centros comerciales 
      en el Valle de Aburrá. Este sistema generará 773.168 kWh/año de energía limpia, lo que representa el 30% del 
      consumo energético del centro comercial, equivalente al consumo de 715 hogares. Además, evitará la emisión de 294,6 
      toneladas de CO<sub>2</sub> al año, lo que equivale a 48.852 árboles plantados. Este proyecto se suma a otras 
      iniciativas ambientales, como la recolección de botellas plásticas y el fomento del uso de bicicletas. 
      Los Molinos y Celsia están comprometidos con un futuro sostenible, impulsando un consumo responsable y contribuyendo
-      a la mitigación del cambio climático. </p></justify>
+      a la mitigación del cambio climático. </p>
         <a href="https://losmolinos.com.co/nos-convertimos-en-el-centro-comercial-con-mayor-generacion-de-energia-fotovoltaica-de-medellin-y-el-valle-de-aburra/"><img
             src="" />Para más detalles.</a>
 
@@ -61,9 +61,9 @@
     <center><p2 onmouseover="img3()">El Centro comercial el Tesoro de Medellin y los paneles solares de EPM.</p2></center>
 
         <br></br>
-        <h3> El primer cliente de la línea de energía solar de EPM se  convirtío el Parque Comercial El Tesoro: </h3>
+        <h3 class="text-center"> El primer cliente de la línea de energía solar de EPM se  convirtío el Parque Comercial El Tesoro: </h3>
         <br>
-        <p> El Grupo EPM lanzó su servicio de energía solar con la inauguración de un sistema fotovoltaico de más de 2.500 metros cuadrados en el 
+        <p text-align: justify-all> El Grupo EPM lanzó su servicio de energía solar con la inauguración de un sistema fotovoltaico de más de 2.500 metros cuadrados en el 
             Parque Comercial El Tesoro, convirtiéndose en el primero en implementar este modelo de servicio para grandes consumidores. El sistema, 
             que consta de 1.568 paneles solares, generará 598 MWh/año, cubriendo el 32% del consumo de las zonas comunes del parque y evitando la 
             emisión de 119 toneladas de CO<sub>2</sub> al año. El Parque asumió un compromiso con la sostenibilidad, implementando iniciativas como 
@@ -71,7 +71,7 @@
              de residuos. ExpoSolar Colombia destacó la apuesta de EPM y El Tesoro por la sostenibilidad.</p>   
             <a href="https://feriaexposolar.com/parque-comercial-el-tesoro-primer-cliente-de-la-linea-de-energia-solar-de-epm/"><img
                 src="" />Para más detalles.</a>
-    
+</section>    
                 <script src="app.js"></script>
 </body>
 
