--- a/pagina2.html
+++ b/pagina2.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caso 2</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!--lines necesarias para footer-->
     <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="mystyles.css">
+    <link rel="stylesheet" href="./css/mystyles.css">
     <link rel="shortcut icon" href="./imagenes/edificio.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="./css/normalize.css">
@@ -72,25 +72,26 @@
             <a href="https://feriaexposolar.com/parque-comercial-el-tesoro-primer-cliente-de-la-linea-de-energia-solar-de-epm/"><img
                 src="" />Para más detalles.</a>
 </section>    
-                <script src="app.js"></script>
+                <script src="./js/app.js"></script>
 </body>
 
 
 <footer style="background-color: #007BFF; color: white; text-align: center; padding: 20px;">
-    <p1>&copy; 2025 Energía Solar. Todos los derechos reservados.</p1>
+    <p>&copy; 2025 Energía Solar. Todos los derechos reservados.</p>
     <nav>
         <ul style="list-style: none; padding: 0; display: flex; justify-content: center; gap: 20px;">
-            <li><a1 href="#" style="color: white; text-decoration: none;">Inicio</a1></li>
-            <li><a1 href="#" style="color: white; text-decoration: none;">Acerca de</a1></li>
-            <li><a1 href="#" style="color: white; text-decoration: none;">Contacto</a1></li>
+            <li><a href="./index.html#" style="color: white; text-decoration: none;">Inicio</a></li>
+            <li><a href="./CALCULADORA.HTML" style="color: white; text-decoration: none;">Acerca de Nosotros</a></li>
+            <li><a href="./index.html#contact" style="color: white; text-decoration: none;">Contacto</a></li>
         </ul>
     </nav>
     <div style="margin-top: 10px;">
-        <a1 href="https://facebook.com" target="_blank" style="background-color: white; color: #007BFF; padding: 10px 15px; border-radius: 5px; text-decoration: none; margin: 5px;">Facebook</a1>
-        <a1 href="https://instagram.com" target="_blank" style="background-color: white; color: #007BFF; padding: 10px 15px; border-radius: 5px; text-decoration: none; margin: 5px;">Instagram</a1>
-        <a1 href="https://twitter.com" target="_blank" style="background-color: white; color: #007BFF; padding: 10px 15px; border-radius: 5px; text-decoration: none; margin: 5px;">Twitter</a1>
+        <a href="https://facebook.com" target="_blank" style="background-color: white; color: #007BFF; padding: 10px 15px; border-radius: 5px; text-decoration: none; margin: 5px;">Facebook</a>
+        <a href="https://instagram.com" target="_blank" style="background-color: white; color: #007BFF; padding: 10px 15px; border-radius: 5px; text-decoration: none; margin: 5px;">Instagram</a>
+        <a href="https://twitter.com" target="_blank" style="background-color: white; color: #007BFF; padding: 10px 15px; border-radius: 5px; text-decoration: none; margin: 5px;">Twitter</a>
     </div>
 </footer>
+
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
