--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
         <div class="row justify-content-center">
             <div class="col-md-5">
                      <!-- Entradas para el consumo de energía mensual -->
-    <input type="number" id="mes1" placeholder="Consumo mes 1 (kWh)">
-    <input type="number" id="mes2" placeholder="Consumo mes 2 (kWh)">
-    <input type="number" id="mes3" placeholder="Consumo mes 3 (kWh)">
-    <input type="number" id="mes4" placeholder="Consumo mes 4 (kWh)">
-    <input type="number" id="mes5" placeholder="Consumo mes 5 (kWh)">
+    <input type="number" class="form-control type" id="mes1" placeholder="Consumo mes 1 (kWh)">
+    <input type="number" class="form-control type" id="mes2" placeholder="Consumo mes 2 (kWh)">
+    <input type="number" class="form-control type" id="mes3" placeholder="Consumo mes 3 (kWh)">
+    <input type="number" class="form-control type" id="mes4" placeholder="Consumo mes 4 (kWh)">
+    <input type="number" class="form-control type" id="mes5" placeholder="Consumo mes 5 (kWh)">
     
     <select id="tipoCelda">
         <option value="Monocristalina - 20%">Monocristalina - 20%</option>
